# new_lemin

./: .gitignore  CMakeLists.txt  Makefile  ant_moves.txt  author  lem-in  log.txt  test_map  visu-hex  visu_hex
includes/: lemin.h
libft/: Makefile  ft_abs.c  ft_atoi.c  ft_atoi_hex.c  ft_bzero.c  ft_chrin_str.c  ft_free_2arr.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_itoa_base.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memalloc.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_printarr.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putnchar.c  ft_putnstr.c  ft_putnwstr.c  ft_putstr.c  (+39 more)
libft/ft_printf/: ft_printf.c  ft_printf_cast_unum.c  ft_printf_getcolor.c  ft_specinfo_init.c  print_manager.c  specificator_manager.c
libft/includes/: ft_printf.h  libft.h
src/: find_ways.c  main.c  parse_edge.c  parse_room.c  print_error.c  print_result.c  read_file.c  save_ways.c  support_func.c  tmp_debug.c  valid_and_set_weight.c
visu-hex/: Makefile  main.cpp  visu-hex  visu-hex.pro
visu-hex/img/: room1_100px.xpm  room1_landscape.xpm  room3_100px.xpm
visu-hex/includes/: ft_mlx_image.h  lem_in_vizualizer.h
visu-hex/src/: main.c  parse_edge.c  parse_room.c  read_data.c  read_file.c  run_hooks.c  support_func.c  tmp_debug.c
visualize/: Makefile  visu-hex
visualize/includes/: ft_mlx_image.h  lem_in_vizualizer.h
visualize/src/: ant_move.c  find_ant.c  lemin_draw_ants.c  (+11 more)
(+35 files in other folders)
